# lance-c

./: CMakeLists.txt
cmake/: LanceCConfig.cmake.in
include/lance/: lance.h  lance.hpp
src/: add_columns.rs  lib.rs  merge_insert.rs
tests/: c_api_test.rs
tests/cpp/: test_c_api.c  test_cpp_api.cpp
